feat(header-footer): start structure
  - Improve default layout with header and footer includes
  - Test default layout with index.md
  - Add my social networks in _data/social-networks.json

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.language | default: "en-US" }}">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
   </head>
   <body>
-    {{ content }}
+    <div class="container mx-auto px-6 md:px-4">
+      {% include header.html title=page.title description=page.description date=page.date %}
+      {{content}}
+      {% include footer.html %}
+    </div>
   </body>
 </html>
