--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,28 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* image align left */
+.align-left {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: left;
+  margin-right: 1em;
+}
+
+/* image align right */
+.align-right {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: right;
+  margin-left: 1em;
+}
+
+/* image align center */
+.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
