--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,11 @@
 ---
 ---
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+@import "assets/css/syntax-hightlight/native";
 
 /* image align left */
 .align-left {
