--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="mt-2 py-4 border-double border-t-4">
+<footer class="mt-4 py-3 border-t-2 border-stone-400">
   <div class="container mx-auto">
     <div class="flex mb-2">
       {% for network in site.data.social-networks %}
