feat(custom-font): add fonts
 - Add google fonts and apply into tailwind config
 - replace hamburger icon for site title in header
 - Change site title to "CallMarx.dev"

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,5 @@
-<header class="flex justify-between py-6">
-  <div class="text-stone-900 hover:text-stone-600"> <!-- visible md:invisible  To Do: use vue to build menu for mobile -->
-    <svg class="w-8 h-8" stroke="currentColor" fill="currentColor" stroke-width="1" viewBox="0 0 16 16">
-      <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
-    </svg>
-  </div>
+<header class="flex justify-between pt-6 pb-3">
+  <span class="font-codepro font-bold text-3xl text-stone-900 hover:text-stone-600">{{ site.title }}</span>
   <div class="flex justify-between">
     <div class="flex text-stone-900 hover:text-stone-600">
       <svg class="w-6 h-6 mt-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
