feat(home-index): index layout
  - create index.html layout
  - Add main image into post that didn't have it
  - Adjust main image in this new layout and in the post layout
  - Add some pretty design :)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="flex justify-between pt-6 pb-3">
-  <span class="font-codepro font-bold text-3xl text-stone-900 hover:text-stone-600">{{ site.title }}</span>
+  <a class="font-codepro font-bold text-3xl text-stone-900 hover:text-stone-600" href="/">{{ site.title }}</a>
   <div class="flex justify-between">
     <div class="flex text-stone-900 hover:text-stone-600">
       <svg class="w-6 h-6 mt-1" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 16 16">
