--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
     </div>
   {% endif %}
   {% if page.image %}
-    <img class="object-cover h-112 mb-8 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}">
+    <img class="object-contain h-80 md:h-112 md:mb-8 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}">
   {% endif %}
 </div>
 
