--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,12 +14,7 @@ layout: default
       <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:text-stone-600">
         <h2 class="">{{ post.title }}</h2>
       </a>
-      <div class="flex justify-start text-center font-medium text-gray-500 my-2">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
-        </svg>
-        <span class="ml-2">{{ post.date | date: "%d-%m-%Y" }}</span>
-      </div>
+     {% include date-readtime.html date=post.date content=post.content align="start" %}
       <p class="text-xl text-stone-700 mb-4">{{ post.excerpt }}</p>
       {% if post.tags %}
         <div class="mb-2">
