--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,26 +3,5 @@ layout: default
 ---
 
 {% for post in site.posts %}
-  <div class="flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-8 px-6">
-    {% if post.image %}
-      <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
-        <a class="bg-gray-100" href="{{ post.url }}">
-          <img class="object-contain pb-8 xl:pb-0 md:h-80 rounded 2xl:mb-3 hover:opacity-70 transition duration-300 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
-      </div>
-    {% endif %}
-    <div class="flex-1">
-      <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:text-stone-600">
-        <h2 class="">{{ post.title }}</h2>
-      </a>
-     {% include date-readtime.html date=post.date content=post.content align="start" %}
-      <p class="text-xl text-stone-700 mb-4">{{ post.excerpt }}</p>
-      {% if post.tags %}
-        <div class="mb-2">
-          {% for tag in post.tags %}
-            <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="#">{{ tag }}</a>
-          {% endfor %}
-        </div>
-      {% endif %}
-    </div>
-  </div>
+   {% include listed-post.html url=post.url title=post.title content=post.content image=post.image tags=post.tags excerpt=post.excerpt date=post.date align="start" %}
 {% endfor %}
