--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,19 +4,18 @@ layout: default
 
 <!-- Title + Date + Main Image -->
 <div class="flex flex-col pt-6 md:pt-12 lg:w-11/12 mx-auto">
-    <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold md:mb-2">
-      {{ page.title }}
-    </h1>
-  {% include date-readtime.html date=page.date content=page.content align="center" %}
-  {% if page.image %}
-    <img class="object-contain h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}">
+  <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold md:mb-2">
+    {{ page.title }}
+  </h1>
+  {% if page.date %}
+    {% include date-readtime.html date=page.date content=page.content align="center" %}
   {% endif %}
-</div>
+  {% if page.image %}
+    <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}">
+  {% endif %}
 
 <!-- Post Content -->
-<div class="flex justify-center">
-  <div class="w-full prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
+  <div class="self-center w-full prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
     {{ content }}
-  </div>
 </div>
 
