--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-8 px-6">
+<div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
   {% if include.image %}
     <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
       <a class="bg-gray-100" href="{{ include.url }}">
