--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="flex justify-between pt-6 pb-3">
+<header class="flex justify-between pt-6 pb-3 border-b-2 border-stone-400">
   <a class="font-marker text-3xl md:text-4xl text-stone-900 hover:text-stone-600" href="/">{{ site.title }}</a>
   <div class="flex justify-between">
     <a class="flex text-stone-900 hover:text-stone-600" href="/tags/">
