--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,6 @@ layout: default
 <!-- Post Content -->
   <div class="self-center w-full prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
     {{ content }}
+  </div>
 </div>
 
