--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,22 +1,29 @@
-<div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
-  {% if include.image %}
-    <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
-      <a class="bg-gray-100" href="{{ include.url }}">
-        <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ include.title }}" src="{{ include.image }}"/></a>
-    </div>
-  {% endif %}
-  <div class="flex-1">
-    <a href="{{ include.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:text-stone-600">
-      <h2 class="">{{ include.title }}</h2>
-    </a>
-   {% include date-readtime.html date=include.date content=include.content align=include.align %}
-    <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ include.excerpt }}</div>
-    {% if include.tags %}
-      <div class="mb-2">
-        {% for tag in include.tags %}
-          <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
-        {% endfor %}
+<div class="self-center w-11/12 flex">
+  <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
+  <h2 class="mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500">Últimas publicações</h2>
+  <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
+</div>
+{% for post in include.posts %}
+  <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
+    {% if post.image %}
+      <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
+        <a class="bg-gray-100" href="{{ post.url }}">
+          <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
       </div>
     {% endif %}
+    <div class="flex-1">
+      <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:text-stone-600">
+        <h2 class="">{{ post.title }}</h2>
+      </a>
+     {% include date-readtime.html date=post.date content=post.content align=include.align %}
+      <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
+      {% if post.tags %}
+        <div class="mb-2">
+          {% for tag in post.tags %}
+            <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
+          {% endfor %}
+        </div>
+      {% endif %}
+    </div>
   </div>
-</div>
+{% endfor %}
