--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,13 +3,10 @@ layout: default
 ---
 
 <div class="flex flex-col pt-6 md:pt-12 lg:w-11/12 mx-auto">
-  <div class="self-center w-11/12 flex justify-between mb-8">
-    <img class="mt-4 sm:mt-2 md:self-center h-24 w-24 xs:h-28 xs:w-28 sm:h-32 sm:w-32 md:h-36 md:w-36 lg:h-40 lg:w-40 xl:h-48 xl:w-48 rounded-full border-double border-4 border-beige-500" src="{{ page.image }}" alt="Rounded avatar">
-    <div class="flex flex-col w-full md:w-3/4 ml-2 md:ml-0">
-      <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
-        {{ content }}
-      </div>
-      <div class="flex justify-start mt-4">
+  <div class="w-full flex flex-col-reverse md:flex-row justify-between mb-8">
+    <div class="self-start md:self-center md:w-1/3 mt-4 md:mt-0 flex flex-row md:flex-col justify-start md:justify-between">
+      <img class="self-center h-24 w-24 xs:h-28 xs:w-28 sm:h-32 sm:w-32 md:h-36 md:w-36 lg:h-40 lg:w-40 xl:h-48 xl:w-48 rounded-full border-double border-4 border-beige-500 shadow-lg" src="{{ page.image }}" alt="Rounded avatar">
+      <div class="flex justify-center self-center md:mt-4 ml-4 md:ml-0">
         {% for network in site.data.social-networks %}
           <a class="py-2 mr-2" href="{{ network.link }}">
             <img class="h-8 w-8" src="{{ network.logo }}" alt="{{ network.name }}" />
@@ -17,13 +14,9 @@ layout: default
         {% endfor %}
       </div>
     </div>
+    <div class="md:w-3/4 prose prose-base prose-a:text-sky-800 prose-p:font-codepro prose-p:text-stone-800 prose-h2:font-codepro md:prose-lg lg:prose-2xl">
+      {{ content }}
+    </div>
   </div>
-  <div class="self-center w-11/12 flex">
-    <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
-    <h2 class="mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500">Últimas publicações</h2>
-    <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
-  </div>
-{% for post in site.posts %}
-   {% include listed-post.html url=post.url title=post.title content=post.content image=post.image tags=post.tags excerpt=post.excerpt date=post.date align="start" %}
-{% endfor %}
+   {% include listed-post.html posts=site.posts align="start" %}
 </div>
