--- a/_layouts/autopages_tags.html
+++ b/_layouts/autopages_tags.html
@@ -8,5 +8,5 @@ pagination:
   <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold mb-4 md:mb-8">
     Posts sob a tag {{ page.title }}
   </h1>
-  {% include listed-post.html posts=page.posts align="start" %}
+  {% include listed-post.html posts=paginator.posts align="start" %}
 </div>
