--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -1,46 +1,52 @@
-<div class="self-center w-11/12 flex">
-  <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
-  <h2 class="mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500">Últimas publicações</h2>
-  <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
-</div>
-{% for post in include.posts %}
-  <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
-    {% if post.image %}
-      <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
-        <a class="bg-gray-100" href="{{ post.url }}">
-          <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
-      </div>
-    {% endif %}
-    <div class="flex-1">
-      <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
-        <h2 class="">{{ post.title }}</h2>
-      </a>
-     {% include date-readtime.html date=post.date content=post.content align=include.align %}
-      <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
-      {% if post.tags %}
-        <div class="mb-2">
-          {% for tag in post.tags %}
-            <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs md:text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
-          {% endfor %}
-        </div>
+<turbo-frame id="listing-posts" class="flex flex-col" >
+  <div class="self-center w-11/12 flex">
+    <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
+    <h2 class="mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500">Últimas publicações</h2>
+    <div class="mt-4 grow border-dashed border-t-2 border-stone-300"></div>
+    <div class="pagination">
+      {% if paginator.previous_page %}
+        <a href="{{ paginator.previous_page_path }}" class="previous">
+          Previous
+        </a>
+      {% else %}
+        <span class="previous">Previous</span>
+      {% endif %}
+      <span class="page_number ">
+        Page: {{ paginator.page }} of {{ paginator.total_pages }}
+      </span>
+      {% if paginator.next_page %}
+        <a href="{{ paginator.next_page_path }}" class="next">Next</a>
+      {% else %}
+        <span class="next ">Next</span>
       {% endif %}
     </div>
   </div>
-{% endfor %}
-<div class="pagination">
-  {% if paginator.previous_page %}
-    <a href="{{ paginator.previous_page_path }}" class="previous">
-      Previous
-    </a>
-  {% else %}
-    <span class="previous">Previous</span>
-  {% endif %}
-  <span class="page_number ">
-    Page: {{ paginator.page }} of {{ paginator.total_pages }}
-  </span>
-  {% if paginator.next_page %}
-    <a href="{{ paginator.next_page_path }}" class="next">Next</a>
-  {% else %}
-    <span class="next ">Next</span>
-  {% endif %}
-</div>
+  {% for post in include.posts %}
+    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
+      {% if post.image %}
+        <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
+          <a class="bg-gray-100" href="{{ post.url }}">
+            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
+        </div>
+      {% endif %}
+      <div class="flex-1">
+        <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
+          <h2 class="">{{ post.title }}</h2>
+        </a>
+       {% include date-readtime.html date=post.date content=post.content align=include.align %}
+        <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
+        {% if post.tags %}
+          <div class="mb-2">
+            {% for tag in post.tags %}
+              <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs md:text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
+            {% endfor %}
+          </div>
+        {% endif %}
+      </div>
+    </div>
+  {% endfor %}
+</turbo-frame>
+<!-- <script  type="module" src="{{ '/assets/js/main.js' | relative_url }}"></script> this not working!! -->
+<script type="module">
+  import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+</script>
