--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/assets/css/main.css' }}">
+    <script type="module">
+      import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+    </script>
   </head>
   <body class="bg-beige-100">
     <div class="container mx-auto px-6 md:px-4">
