--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -21,19 +21,19 @@
     {% endif %}
   </div>
   {% for post in include.posts %}
-    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6">
+    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
       {% if post.image %}
         <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
-          <a class="bg-gray-100" href="{{ post.url }}">
+          <a class="bg-gray-100" href="{{ post.url }}" data-turbo="false">
             <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
         </div>
       {% endif %}
       <div class="flex-1">
-        <a href="{{ post.url }}" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
+        <a href="{{ post.url }}" data-turbo="false" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
           <h2 class="">{{ post.title }}</h2>
         </a>
        {% include date-readtime.html date=post.date content=post.content align=include.align %}
-        <div class="prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
+        <div class="prose prose-base prose-a:pointer-events-none prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
         {% if post.tags %}
           <div class="mb-2">
             {% for tag in post.tags %}
