--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -37,7 +37,7 @@
         {% if post.tags %}
           <div class="mb-2">
             {% for tag in post.tags %}
-              <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs md:text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}">{{ tag }}</a>
+              <a class="p-1 px-3 mr-1 mb-1 inline-block text-xs md:text-sm lg:text-base font-codepro rounded bg-stone-300 text-stone-800 hover:bg-sky-200 hover:text-sky-800 transition duration-300 ease-in-out" href="/tags/{{ tag | slugify }}" data-turbo="false">{{ tag }}</a>
             {% endfor %}
           </div>
         {% endif %}
