docs(info): add license and readme

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="mt-4 py-3 border-t-2 border-stone-400">
+<footer class="mt-4 mb-20 pt-3 border-t-2 border-stone-400">
   <div class="container mx-auto">
     <div class="flex mb-2">
       {% for network in site.data.social-networks %}
@@ -16,8 +16,8 @@
         <a href="https://tailwindcss.com" rel="noopener noreferrer nofollow" target="_blank">
           <b>Tailwind</b>
         </a>, sob a licença
-        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" rel="noopener noreferrer nofollow" target="_blank">
-          <b>GPLv3</b>
+        <a href="https://choosealicense.com/licenses/bsd-3-clause/" rel="noopener noreferrer nofollow" target="_blank">
+          <b>3-Clause BSD</b>
         </a>.
       </span>
     </div>
