feat(seo): jekyll-seo-tag and lighthouse test
  - install and config jekyll-seo-tag
  - apply seo in _layouts/default.html
  - refactor _layouts/listed-post.html to remove pointer-events-none
    class, replacing anchor tag for span
  - add 'min-h-' and 'min-w-' in posts tags, but the text isn't
    centralized (added a comment for this to-do)
  - Test with Chromium lighthouse gave 100% for seo!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     </div>
     <div class="text-sm text-gray-600">
       <span>
-        &copy; {{ site.time | date: '%Y' }} {{ site.name }}. Desenvolvido com o framework
+        &copy; {{ site.time | date: '%Y' }} {{ site.author }}. Desenvolvido com o framework
         <a href="https://jekyllrb.com" rel="noopener noreferrer nofollow" target="_blank">
           <b>Jekyll</b>
         </a> e
