--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     <script type="module">
       import hotwiredTurbo from 'https://cdn.skypack.dev/@hotwired/turbo';
     </script>
+    {% seo %}
   </head>
   <body class="bg-beige-100">
     <div class="container mx-auto px-6 md:px-4">
