fix(lighthouse-test): solve some issues
  - Replace all tenor gifs for img tag with alt description
  - Define css classes for note-info and note-warning
  - Solve some other accessibilities problems about "contrast ratio" and "discernible name"
  - Tried Monokai Pygment theme but it also has "contrast ratio"
    problem. Add a comment for this to-do.

--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -43,7 +43,7 @@
       {% if post.image %}
         <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
           <a class="bg-gray-100" href="{{ post.url }}" data-turbo="false">
-            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.title }}" src="{{ post.image }}"/></a>
+            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.image_alt }}" src="{{ post.image }}"/></a>
         </div>
       {% endif %}
       <div class="flex-1">
