--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
     {% include date-readtime.html date=page.date content=page.content align="center" %}
   {% endif %}
   {% if page.image %}
-    <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}">
+  <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.image }}" alt="{{ page.image_alt }}">
   {% endif %}
 
 <!-- Post Content -->
