fix(open-graph): can't be svg
  - Open graph image can't be in SVG format.
    Source: https://indieweb.org/The-Open-Graph-protocol#Does_not_support_SVG_images
  - Add "main_image" for Front Matter in posts as a aditional option to render
    image and the "image" option for .webp extension type.

--- a/_includes/listed-post.html
+++ b/_includes/listed-post.html
@@ -40,12 +40,10 @@
   </div>
   {% for post in include.posts %}
     <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
-      {% if post.image %}
         <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
           <a class="bg-gray-100" href="{{ post.url }}" data-turbo="false">
-            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.image_alt }}" src="{{ post.image }}"/></a>
+            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.image_alt }}" src="{{ post.main_image | default: post.image }}"/></a>
         </div>
-      {% endif %}
       <div class="flex-1">
         <a href="{{ post.url }}" data-turbo="false" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
           <h2 class="">{{ post.title }}</h2>
