bug(stimulus): method not working
  - stimulus method is retruning:
    `references undefined method "greet" at get method [as method] (stimulus.js:289:15)
        at Binding.invokeWithEvent (stimulus.js:296:18)
        at Binding.handleEvent (stimulus.js:278:18)
        at EventListener.handleEvent (stimulus.js:49:25)`
  - Same error occurs with the reference:
    https://github.com/tocteman/jekyll_starter
  - Add jekyll-sitemap gem
  - Enable dark mode in tailwind.config.js
  - Add some commented methods for dark mode in hello_controller.js
    references: https://tailwindcss.com/docs/dark-mode

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <header class="flex justify-between pt-6 pb-3 border-b-2 border-stone-400">
+  <div data-controller="hello">
+    <input type="text" class="border-2 shadow"
+      data-hello-target="name">
+    <button data-action="click->hello#greet">Greet</button>
+  </div>
   <a class="font-marker text-3xl md:text-4xl text-stone-900 hover:opacity-40 transition duration-200 ease-in-out" href="/">{{ site.title }}</a>
   <div class="flex justify-between">
     <a class="flex text-stone-900 hover:opacity-40 transition duration-200 ease-in-out" href="/tags/" aria-label="Tags icon">
