--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     </script>
     <script type="text/javascript" src="/dist/bundle.js"></script>
   </head>
-  <body class="bg-beige-100" data-controller="hello">
+  <body class="bg-beige-100 dark:bd-black">
     <div class="container mx-auto px-6 md:px-4">
       {% include header.html %}
       {{content}}
