feat(flickering): inline script before head tag
  - Add _includes/head-darkmode-check.html in head tag and before body
    tag to avoid FOUC (flash of unstyled content) when changing pages or themes
  - Rename ThemeController to DarkModeController
  - Add properly @hotwired packages
  - import @hotwired/turbo in assets/js/index.js instead of cdn
  - Add custom dark mode css theme in tailwind.config.js

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -4,9 +4,9 @@
       data-hello-target="name">
     <button data-action="click->hello#greet">Greet</button>
   </div>
-  <div data-controller="theme">
-    <button data-action="click->theme#useDarkMode">Dark Mode</button>
-    <button data-action="click->theme#useLightMode">Light Mode</button>
+  <div data-controller="dark-mode">
+    <button data-action="click->dark-mode#useDarkMode">Dark Mode</button>
+    <button data-action="click->dark-mode#useLightMode">Light Mode</button>
   </div>
   <a class="font-marker text-3xl md:text-4xl text-stone-900 hover:opacity-40 transition duration-200 ease-in-out" href="/">{{ site.title }}</a>
   <div class="flex justify-between">
