--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   {% endif %}
 
 <!-- Post Content -->
-  <div class="self-center w-full prose prose-base prose-a:text-sky-800 prose-p:text-stone-800 md:prose-lg lg:prose-2xl">
+  <div class="self-center w-full prose prose-custom prose-base md:prose-lg lg:prose-2xl dark:prose-invert">
     {{ content }}
   </div>
 </div>
