--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="mt-4 mb-20 pt-3 border-t-2 border-stone-400">
+<footer class="mt-4 mb-20 pt-3 border-t-2 border-stone-400 dark:border-stone-100">
   <div class="container mx-auto">
     <div class="flex mb-2">
       {% for network in site.data.social-networks %}
@@ -7,7 +7,7 @@
         </a>
       {% endfor %}
     </div>
-    <div class="text-sm text-gray-600">
+    <div class="text-sm text-gray-600 dark:text-gray-200">
       <span>
         &copy; {{ site.time | date: '%Y' }} {{ site.author }}. Desenvolvido com o framework
         <a href="https://jekyllrb.com" rel="noopener noreferrer nofollow" target="_blank">
