--- a/src/_includes/listed-post.html
+++ b/src/_includes/listed-post.html
@@ -1,11 +1,11 @@
 <turbo-frame id="listing-posts" class="flex flex-col">
   <div class="self-center w-full lg:w-11/12 flex flex-row-reverse sm:flex-row">
-    <h2 class="hidden sm:block mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500">Últimas publicações</h2>
+    <h2 class="hidden sm:block mx-2 font-semibold text-lg md:text-xl lg:text-2xl text-stone-500 dark:text-stone-200">Últimas publicações</h2>
     <div class="hidden sm:block mt-4 grow border-dashed border-t-2 border-stone-300"></div>
     {% if paginator.total_pages > 1 %}
       <div class="inline-flex items-center -space-x-px">
         {% unless paginator.previous_page %}
-          <span class="py-2 px-2 leading-none text-stone-600 bg-white rounded-l-lg border border-gray-300 opacity-40" >
+          <span class="py-2 px-2 leading-none text-stone-600 bg-white rounded-l-lg border border-gray-300 opacity-40 dark:opacity-60" >
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>
           </span>
         {% else %}
@@ -16,7 +16,7 @@
         {% if paginator.page_trail %}
           {% for trail in paginator.page_trail %}
             {% if page.pagination_info.curr_page == trail.num %}
-              <span class="py-2 px-3 leading-none font-semibold text-stone-600 bg-white border border-gray-300 opacity-40">
+              <span class="py-2 px-3 leading-none font-semibold text-stone-600 bg-white border border-gray-300 opacity-40 dark:opacity-60">
                 {{ trail.num }}
               </span>
             {% else %}
@@ -27,7 +27,7 @@
           {% endfor %}
         {% endif %}
         {% unless paginator.next_page %}
-          <span class="py-2 px-2 leading-none text-stone-600 bg-white rounded-r-lg border border-gray-300 opacity-40">
+          <span class="py-2 px-2 leading-none text-stone-600 bg-white rounded-r-lg border border-gray-300 opacity-40 dark:opacity-60">
             <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
           </span>
         {% else %}
@@ -39,17 +39,17 @@
     {% endif %}
   </div>
   {% for post in include.posts %}
-    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
+    <div class="self-center flex flex-col md:flex-row w-full lg:w-11/12 rounded-lg shadow-lg dark:shadow-gray-600 md:my-4 px-6 hover:shadow-2xl transition duration-200 ease-in-out">
         <div class="mb-2 md:mr-4 md:mb-0 md:w-4/12 ">
           <a class="bg-gray-100" href="{{ post.url }}" data-turbo="false">
-            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out" alt="{{ post.image_alt }}" src="{{ post.main_image | default: post.image }}"/></a>
+            <img class="object-contain mx-auto mt-4 mb-2 md:mb-4 xl:my-auto md:h-80 rounded 2xl:mb-3 hover:opacity-40 transition duration-200 ease-in-out dark:bg-beige-100" alt="{{ post.image_alt }}" src="{{ post.main_image | default: post.image }}"/></a>
         </div>
       <div class="flex-1">
-        <a href="{{ post.url }}" data-turbo="false" class="text-2xl text-stone-800 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
+        <a href="{{ post.url }}" data-turbo="false" class="text-2xl text-stone-800 dark:text-stone-200 font-bold mb-1 hover:opacity-40 transition duration-200 ease-in-out">
           <h2 class="">{{ post.title }}</h2>
         </a>
        {% include date-readtime.html date=post.date content=post.content align=include.align %}
-        <div class="prose prose-base prose-a:pointer-events-none prose-p:text-stone-800 md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl mb-4">{{ post.excerpt }}</div>
+        <div class="mb-4 prose prose-custom prose-base prose-a:pointer-events-none md:prose-p:text-lg lg:prose-p:text-xl md:prose-lg lg:prose-2xl dark:prose-invert">{{ post.excerpt }}</div>
         {% if post.tags %}
           <div class="mb-2">
             {% for tag in post.tags %}
