--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -13,7 +13,7 @@
     {% include head-darkmode-check.html %}
     <script type="text/javascript" src="{{ '/dist/main-bundle.js' }}"></script>
   </head>
-  <body class="bg-beige-100 dark:bg-black">
+  <body class="bg-beige-100 dark:bg-slate-800">
     <div class="container mx-auto px-6 md:px-4">
       {% include header.html %}
       {{content}}
