--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -4,14 +4,14 @@ layout: default
 
 <!-- Title + Date + Main Image -->
 <div class="flex flex-col pt-6 md:pt-12 lg:w-11/12 mx-auto">
-  <h1 class="text-center text-stone-800 text-3xl md:text-4xl lg:text-5xl font-bold md:mb-2">
+  <h1 class="text-center text-stone-800 dark:text-gray-200 text-3xl md:text-4xl lg:text-5xl font-bold md:mb-2">
     {{ page.title }}
   </h1>
   {% if page.date %}
     {% include date-readtime.html date=page.date content=page.content align="center" %}
   {% endif %}
   {% if page.image %}
-    <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16" src="{{ page.main_image | default: page.image }}" alt="{{ page.image_alt }}">
+    <img class="self-center object-contain w-5/6 md:w-3/4 h-80 md:h-112 md:mb-8 md:mt-6 lg:mx-4 xl:mx-8 2xl:mx-16 dark:bg-beige-100" src="{{ page.main_image | default: page.image }}" alt="{{ page.image_alt }}">
   {% endif %}
 
 <!-- Post Content -->
