--- a/src/_webpack/main.css
+++ b/src/_webpack/main.css
@@ -39,9 +39,9 @@
 }
 
 .note-info {
-  @apply py-4 px-6 text-sm sm:text-base lg:text-xl bg-sky-100/70 rounded-md
+  @apply py-4 px-6 text-sm sm:text-base lg:text-xl bg-sky-100/70 rounded-md dark:bg-sky-400/20
 }
 
 .note-warning {
-  @apply py-4 px-6 text-sm sm:text-base lg:text-xl bg-orange-100/70 rounded-md
+  @apply py-4 px-6 text-sm sm:text-base lg:text-xl bg-orange-100/70 rounded-md dark:bg-orange-400/20
 }
