build(deploy): adjustments for deploy
  - move css and js content to assets folder
  - update config
  - update twitter's link
  - update README

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -7,11 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Source+Code+Pro&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{{ '/dist/main-bundle.css' }}">
+    <link rel="stylesheet" href="{{ '/assets/main-bundle.css' }}">
     {% seo %}
     {% include analytics.html %}
     {% include head-darkmode-check.html %}
-    <script type="text/javascript" src="{{ '/dist/main-bundle.js' }}"></script>
+    <script type="text/javascript" src="{{ '/assets/main-bundle.js' }}"></script>
   </head>
   <body class="bg-beige-100 dark:bg-slate-900">
     <div class="container mx-auto px-6 md:px-4">
