feat(translations): TagPagePlugin
  - Create a custom plugin TagPagePlugin to generate pages dynamically for
    a selected tag replacing Jekyll::Paginate V2::AutoPages witch it was
    disable in _config.yml
  - Fix autopages_tags.html layout
  - Source: https://alphahydrae.com/2021/01/how-to-generate-and-enrich-pages-in-a-jekyll-blog/

--- a/src/_includes/date-readtime.html
+++ b/src/_includes/date-readtime.html
@@ -10,6 +10,6 @@
   </svg>
   <span class="ml-2" title="Estimated read time">
     {% assign words = include.content | strip_html | number_of_words %}
-    {{ words | divided_by: site.word_count | at_least: 2 }} minutos de leitura.
+    {{ words | divided_by: site.word_count | at_least: 2 }} {{ site.data.translations.minutesReading[page.locale] }}.
   </span>
 </div>
